add docker file

--- a/AIHelperDemo.csproj
+++ b/AIHelperDemo.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
       <UserSecretsId>9eca50bb-1890-4f8d-9470-3294e217f68f</UserSecretsId>
+      <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
     <ItemGroup>
